--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@prisma/client": "^6.1.0",
     "bcrypt": "^5.1.1",
     "heroicons": "^2.2.0",
+    "jotai": "^2.11.0",
     "next": "15.1.3",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.4.1",
+    "recoil": "^0.7.7",
     "zod": "^3.24.1"
   },
   "devDependencies": {
