--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   },
   "dependencies": {
     "@prisma/client": "^6.1.0",
+    "@types/draft-js": "^0.11.18",
     "bcrypt": "^5.1.1",
+    "draft-js": "^0.11.7",
     "heroicons": "^2.2.0",
     "jotai": "^2.11.0",
     "next": "15.1.3",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.4.1",
+    "react-quill-new": "^3.3.3",
     "recoil": "^0.7.7",
     "zod": "^3.24.1"
   },
