--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
     "@prisma/client": "^6.1.0",
     "@types/draft-js": "^0.11.18",
     "bcrypt": "^5.1.1",
