--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@prisma/client": "^6.1.0",
     "@types/draft-js": "^0.11.18",
     "bcrypt": "^5.1.1",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "draft-js": "^0.11.7",
     "framer-motion": "^11.17.0",
     "heroicons": "^2.2.0",
