--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jotai": "^2.11.0",
     "next": "15.1.3",
     "next-auth": "^4.24.11",
+    "nodemailer": "^6.9.16",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
@@ -33,6 +34,7 @@
     "@eslint/eslintrc": "^3",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
